Updated index.html with HTML comment

--- a/Lab01/index..html
+++ b/Lab01/index..html
@@ -4,6 +4,7 @@
         <title>Web Technologies Lab 01</title>
     </head>
     <body>
+        <!--This is my firsth HTML page for Lab 01-->
         Welcome to 224 Web Technologies Course
     </body>
 </html>
