--- a/Lab01/index..html
+++ b/Lab01/index..html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <!--This is my firsth HTML page for Lab 01-->
-        Welcome to 224 Web Technologies Course
+        <h1>Welcome to 224 Web Technologies Course</h1>
+        <h2>This is an experimental change</h2>
     </body>
 </html>
